# gui-renamer

./: .pre-commit-config.yaml  README.md  __builtins__.pyi  com.github.geoffreycoulaud.PatternRenamer.json  meson.build  meson.options  pyproject.toml
data/: desktop.in  gresource.xml.in  gschema.xml.in  meson.build  metainfo.xml.in  service.in
data/icons/: meson.build
data/po/: LINGUAS  POTFILES  POTFILES.in  README.md  fr_FR.po  meson.build  pattern-renamer.pot
docs/: architecture.md
pkg/flatpak/: README.md  com.github.geoffreycoulaud.PatternRenamer.Devel.json  python3-requirements.json
src/: meson.build
src/main/: app.py  constants.py  main.py  main_model.py  meson.build  pattern-renamer.in  signals.py
src/main/components/: empty_page.py  main_window.py  pair_of_strings.py  path_list_item_builder.py  path_list_item_factory.py  rename_item.py  rename_item_life_cycle_manager.py  renamed_page.py  renaming_page.py
src/main/components/widget_builder/: widget_builder.py
src/main/controllers/: main_window_controller.py
src/main/enums/: action_names.py  app_state.py
src/main/models/: main_model.py  mistakes.py  rename_target.py
src/main/signals/: signals.py
src/main/ui/: empty_page.py  main_window.py  rename_item.py  renamed_page.py  renaming_page.py
src/main/widget_builder/: widget_builder.py
src/pattern_renamer/main/: app.py  build_constants.py  build_constants.py.in  build_constants.pyi  main_model.py  meson.build  pattern-renamer.in
src/pattern_renamer/main/styles/: style-dark.css  style.css
src/pattern_renamer/main/types/: mistakes.py
src/pattern_renamer/main/ui/: empty_page.py  main_window.py  rename_item.py  renamed_page.py  renaming_page.py
