[project]
name = "gui-renamer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pathvalidate>=3.3.1",
    "pygobject>=3.52.3",
]

[project.scripts]
gui-renamer = "pattern_renamer.main.app:main"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pygobject-stubs>=2.13.0",
    "requirements-parser>=0.13.0",
    "ruff>=0.12.7",
]

[tool.uv]
package = true
